# icfpc2020

./: .gitignore  Dockerfile.server  README.md  baselines  build.sh  cloud_build_check.py  cloud_build_setup.sh  cloudbuild.yaml  cloudbuild_client.yaml  cloudbuild_client_test.yaml  cloudbuild_master.yaml  cloudbuild_portal.yaml  cloudbuild_server.yaml  cloudbuild_server_test.yaml  run_baselines.sh  strict_run.sh
ai-test-server/: cleaner.py  demodulate.py  main.py  modulate.py  run.sh
ai-test-server/container_manager/: coctl.py
apapnize/: main.py
app/: .main.py.swp  Main.java  main.py  modem  modulator
bakaming/: modulate.cpp  readme.md  run.cpp
demodulator/: Makefile  demodulate.cpp
eomole/galaxy-pad/: README.md  build.sbt
eomole/haskell-generated/: Expr.hs  Galaxy.hs  stack.yaml
eomole/haskell-generator/: build.sbt
eval/: expr.h  flag.h  list.h  logic.h  main.cc  token.h
eval/testdata/: add.in  add_partial.in  b_combinator.in  c_combinator.in  cdr.in  cdr.out  cons.in  fib.in  how_ to_run_the_galaxy_part_1.in  how_ to_run_the_galaxy_part_2.in  if0.in  (+1 more)
judge-dummy/: app.py
modem/: Makefile  README.md  modem.cpp
modulator/: Makefile  main.py  main.rs  readme.md
official/: .gitignore  Cargo.toml  README.md
portal/: Dockerfile  Makefile  README.md  app.py  requirements.txt
python/: apapnize.py  demodulate.py  modulate.py
util_server/: Dockerfile  Makefile  README.md  app.py
utils/: galaxy_explorer.py
yuizumi/: Click.java  Eval.java  GalaxyLoader.java  GalaxyReader.java  Main.java  Modem.java  README.md  galaxy.java  galaxy.py
(+65 files in other folders)
