[package]
name = "official"
version = "0.1.0"
authors = ["Nobuki Yoda <nobuki.y@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.16"
hound = "3.4"

[[bin]]
name = "decode-wav"
path = "decode-wav.rs"